# baziqbrowser

./: AdvancedSettingsView.qml  ApplicationRoot.qml  BookmarkView.qml  BrowserDialog.qml  BrowserWindow.qml  CMakeLists.txt  Database.js  DownloadView.qml  FindBar.qml  FullScreenNotification.qml  HistoryView.qml  LModel.qml  MostVisitedView.qml  README.md  SettingsView.qml  TabsView.qml  WebTabBar.qml  baziqbrowser.desktop  baziqbrowser_tor.desktop  main.cpp  utils.h
